language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_all_top_level_definitions_with_two_generic_functions.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn wibble(one) { todo }\n\nfn wobble(other) { todo }\n"
---
----- BEFORE ACTION

fn wibble(one) { todo }

fn wobble(other) { todo }
   ↑                     


----- AFTER ACTION

fn wibble(one: a) -> b { todo }

fn wobble(other: a) -> b { todo }
