language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_anonymous_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn add_curry(a) {\n  fn(b) { a + b }\n}\n"
---
----- BEFORE ACTION

pub fn add_curry(a) {
  fn(b) { a + b }
  ▔▔▔↑           
}


----- AFTER ACTION

pub fn add_curry(a) {
  fn(b: Int) -> Int { a + b }
}
