language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_anonymous_function_with_annotated_return_type.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn add_curry(a) {\n  fn(b) -> Int { a + b }\n}\n"
---
----- BEFORE ACTION

pub fn add_curry(a) {
  fn(b) -> Int { a + b }
  ▔▔▔↑                  
}


----- AFTER ACTION

pub fn add_curry(a) {
  fn(b: Int) -> Int { a + b }
}
