language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_anonymous_function_with_partially_annotated_parameters.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  fn(a, b: Int, c) { a + b + c }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  fn(a, b: Int, c) { a + b + c }
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑               
}


----- AFTER ACTION

pub fn main() {
  fn(a: Int, b: Int, c: Int) -> Int { a + b + c }
}
