language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_constant.snap
---
source: language-server/src/tests/action.rs
expression: "\npub const my_constant = 20\n"
---
----- BEFORE ACTION

pub const my_constant = 20
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   


----- AFTER ACTION

pub const my_constant: Int = 20
