language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_function_with_partially_annotated_parameters.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn add(a: Float, b) -> Float {\n  a +. b\n}\n"
---
----- BEFORE ACTION

pub fn add(a: Float, b) -> Float {
    ▔▔▔▔▔▔↑                       
  a +. b
}


----- AFTER ACTION

pub fn add(a: Float, b: Float) -> Float {
  a +. b
}
