language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_local_variable.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let my_value = 10\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let my_value = 10
  ▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION

pub fn main() {
  let my_value: Int = 10
}
