language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_local_variable_with_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble {\n  Wibble(a: Int, b: Int, c: Int)\n}\n\npub fn main() {\n  let Wibble(a, b, c) = Wibble(1, 2, 3)\n}\n"
---
----- BEFORE ACTION

type Wibble {
  Wibble(a: Int, b: Int, c: Int)
}

pub fn main() {
  let Wibble(a, b, c) = Wibble(1, 2, 3)
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑                
}


----- AFTER ACTION

type Wibble {
  Wibble(a: Int, b: Int, c: Int)
}

pub fn main() {
  let Wibble(a, b, c): Wibble = Wibble(1, 2, 3)
}
