language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_local_variable_with_pattern2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main(values) {\n  let #(left, right) = values\n}\n"
---
----- BEFORE ACTION

pub fn main(values) {
  let #(left, right) = values
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION

pub fn main(values) {
  let #(left, right): #(a, b) = values
}
